--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Jogo da Velha</title>
+  
+
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -37,6 +39,7 @@
 </head>
 <body>
   <h1>Jogo da Velha</h1>
+  <h2>Modificação</h2>
   <div class="board"></div>
   <div class="message"></div>
   <script src="jogo.js"></script>
